testsuite/tests/linear/should_fail/LinearPolyType.stderr

LinearPolyType.hs:15:1: error:
    Multiplicity coercions are currently not supported

LinearPolyType.hs:15:1: error:
    Multiplicity coercions are currently not supported
